# doc-llm-qa

./: LICENSE  README.md  demo.py  demo_cli.py  practice.py  pyproject.toml  requirements.txt
doc-llm-qa/loader/: pdf_loader.py
docllmqa/generator/: openai.py
docllmqa/loader/: pdf_loader.py
docllmqa/splitter/: text_splitter.py
docllmqa/storage/: openai.py
